changed the currency and removed first line

--- a/src/system/.gitignore
+++ b/src/system/.gitignore
@@ -33,3 +33,9 @@
 /TestLogin.class
 /InvoiceGUI$2.class
 /LoginGUI$1.class
+/RegisterGUI$1.class
+/RegisterGUI.class
+/MenuGUI.class
+/ViewOrdersGUI$1.class
+/ViewOrdersGUI$2.class
+/ViewOrdersGUI.class
